round 1 copyedit/distributed