@@ -4,108 +4,61 @@ description: "Instructions for configuring TeamServer in a distributed fashion b
 tags: "installation setup EOP distributed configuration database scalability"
 -->
 
-## Who Should Read this Document
-This guide is for enterprise on premise (EOP) administrators, who want to move away from the bundled, self-contained TeamServer configuration in favor of a distributed configuration in which the database and application server are deployed on separate servers. Most customers will not have this need of configuring a distributed TeamServer. Customers who fit this profile are likely running with 100 or more connected agents and are seeking greater performance and scalability. 
+## About a Distributed Configuration of Contrast
 
-## About Distributing the TeamServer Configuration
-EOP customers typically install and update the Contrast TeamServer by downloading the installer/updater artifact from the [Contrast Hub](https://hub.contrastsecurity.com). This artifact is an executable file and includes all of the necessary software and components to install, upgrade, and run Contrast TeamServer.  The TeamServer is designed for all embeded components and storage to reside on a single server in a very basic, monolithic configuration.
+This guide is for enterprise on premise (EOP) administrators who want to move away from the bundled, self-contained Contrast configuration to a distributed configuration in which the database and application server are deployed on separate servers. Most customers don't need to configure a distributed Contrast application. Customers who fit this profile are usually running with 100 or more connected agents, and seeking greater performance and scalability. 
 
-Some customers have a need to run in a more advanced configuration. We've written this document for those customers opting for a slightly more advanced configuration that will require additional administration and management by an EOP administrator. We have simplified the configuration of TeamServer for EOP administrators to run their own installations of Tomcat, Java and MySQL, as long as they conform to our version requirements.
+EOP customers typically install and update the Contrast application by downloading the installer/updater artifact from the [Contrast Hub](https://hub.contrastsecurity.com). This artifact is an executable file that includes all the necessary software and components to install, upgrade and run Contrast. The Contrast application is designed for all embeded components and storage to reside on a single server in a very basic, monolithic configuration.
+
+Some customers need to run in a more advanced configuration. We've written this document for those customers opting for a slightly more advanced configuration that will require additional administration and management by an EOP administrator. We have simplified the configuration of TeamServer for EOP administrators to run their own installations of Tomcat, Java and MySQL, as long as they conform to our version requirements.
 
 This documentation will guide you through the setup and configuration of additional software but please be aware you will be responsible for the monitoring and durability of additional software.  That being said, if you are familiar with installing and administering Tomcat and MySQL the process is straightforward to setup and maintain.
 
-Also, check back often for updates. Feel free to submit a Pull Request if you have suggestions or find any instructions incorrect.  All code that we have shared here is also available in our GitHub [repo](https://github.com/Contrast-Security-OSS/ctdc).   
+Check back often for updates and feel free to submit a Pull Request if you have suggestions or find any instructions incorrect.  All code that we have shared here is also available in our GitHub [repo](https://github.com/Contrast-Security-OSS/ctdc).   
 
 ## Before You Get Started
-Before you get started with configuring a distributed TeamServer, make sure to read through the entire document. We've made several assumptions, which we list below. Make sure these assumptions hold true so that you don't run into an issue with your TeamServer. The following assumptions have been made prior to distributing the configuration:
+Before you get started configuring a distributed Contrast application, make sure to read through the entire document and complete the following steps before distributing the configuration:
 
-* Previous installation of TeamServer EOP
-* Successful backup(s) and exports of the TeamServer database.
+* Previous installation of Contrast EOP using the provided installer artifact from Hub 
+* Successful backup(s) and exports of the Contrast database
 * Installation, configuration and administration of MySQL
 * Installation, configuration and administration of Tomcat
 * Installation, configuration and administration of Java
 
+If you need to go back and set up Contrast again, [click here](installation-setupinstall.html#download).  
 
-We are interested in your progress!  If you are planning to explore Contrast TeamServer Distributed Configuration (CTDC), please contrast our [Technical Support Team](https://support.contrastsecurity.com).
+## Deploying the Distributed Configuration 
 
-## Simple As Two Steps
-We have written documentation for deploying a distributed TeamServer in two simple steps:
+There are two steps for deploying a distributed Contrast configuration:
+
 * Step 1: Database (MySQL)
 * Step 2: Application Server (Tomcat)
 
-All documentation assumes that you have previously installed Teamserver using the provided installer artifact from Hub.  If you need to go back and set up TeamServer again [click here](installation-setupinstall.html#download).  
-
->**Note:** We've provided several code samples using an automation framework called [Ansible](https://www.ansible.com/). Feel free to use our code samples as a starting point for your own configuration. We are also big fans of Ubuntu, which we also use in our examples. We can assure you that the configuration runs on all of our supported platforms. You might have to make some slight changes to our scripts to run against other operating systems.
+Contrast provides several code samples using [Ansible](https://www.ansible.com/), an automation framework, as well as Ubuntu that you can use as a starting point for your own configuration. While you may need to make some slight changes to these scripts to run against other operating systems, rest assured that the configuration runs on all platforms supported by Contrast.
 
 ## Step 1: Separating the Database
 
-With a few changes it is possible to utilize an external MySQL database with your existing EOP installation.  MySQL is an open source database that runs on both Windows and Linux.  Here is an list of the steps that you will need to complete:
+With a few changes, you can utilize an external MySQL database - an open-source database that runs on both Windows and Linux - with your existing EOP installation. You'll need to complete the following steps:
 
-1. Install and Configure MySQL 5.6 on database server host.  We recommend 5.6.28.  
-2. Create maintenance window for TeamServer downtime.
-3. [Back up the embedded MySQL Database](installation-setup.html#setup-mysql)
-4. [Restore the database](installation-setup.html#setup-mysql) to an external MySQL Database
-5. [Update the TeamServer configuration](admin-eopupgrade.html#contrast) to utilize the new external database host.
-6. Restart your TeamServer and end the maintenance window.
-
-
-### Installation and Configuration of MySQL Server
-We recommend running TeamServer with MySQL 5.6.28 but TeamServer will work with other versions of MySQL 5.6.x on Windows and Linux.  We recommend working with your Operations and/or Database team to ensure a secure and durable installation.  
-
-Below (or [here](https://github.com/Contrast-Security-OSS/ctdc/blob/master/mysql.yml)) is a snippet of Ansible that you could use to install the latest MySQL 5.6 on Ubuntu 14.04.   
-
-```
-- hosts: mysql
-  sudo: True
-  tasks:
-  - name: Add MySQL deb repo
-    sudo: True
-    apt_repository: repo='deb http://repo.mysql.com/apt/ubuntu/ trusty mysql-5.6' state=present
-
-  - name: Accept gpg key
-    sudo: True
-    apt_key: data="\{{ lookup('file', 'mysql_pubkey.asc') }}" state=present
-
-  - name: apt-get update
-    sudo: True
-    apt: update_cache=yes
-
-  - name: install mysql packages
-    sudo: True
-    apt: pkg=\{{ item }} state=latest
-    with_items:
-      - mysql-server
-      - mysql-client
-      - python-mysqldb
-
-  - name: Change bind_address = *
-    replace: dest=/etc/mysql/my.cnf regexp='127\.0\.0\.1' replace='*'
-
-  - name: Create remote user
-    mysql_user: >
-      login_user=root
-      login_password=
-      name=contrast
-      host=%
-      password=ChAnGeMe
-      priv=*.*:ALL,GRANT
-      state=present
-
-  - name: Create schema 'contrast'
-    mysql_db: name=contrast state=present
-
-  - name: restart mysql
-    service: name=mysql state=restarted
-```
+1. Install and configure MySQL 5.6 on database server host.  Contrast recommends 5.6.28.  
+2. Create maintenance window for Contrast downtime.
+3. [Back up the embedded MySQL Database](installation-setup.html#setup-mysql).
+4. [Restore the database](installation-setup.html#setup-mysql) to an external MySQL database.
+5. [Update the Contrast configuration](admin-eopupgrade.html#contrast) to use the new external database host.
+6. Restart your Contrast application and end the maintenance window.
 
 
-* The gpg keyfile and additional information can be downloaded from the MySQL documentation [here](http://dev.mysql.com/doc/refman/5.6/en/checking-gpg-signature.html)
-* We change the bind address to "*" above but that is only for illustration.  We recommend binding your MySQL server to the ip of your application server.
-* As with the bind address, we recommend creating a user and grants that offer access to only the contrast schema and limited to the host ip address or subnet.
+### Install and configure the MySQL Server
 
-## Taking a Backup of MySQL
+Contrast recommends running the application with MySQL 5.6.28, but it works with other versions of MySQL 5.6.x on Windows and Linux as well. Contrast also recommend working with your Operations and/or Database team to ensure a secure and durable installation.  
 
-See [Create a MySQL Backup](installation-setup.html#setup-mysql)
+Go to the [Github repository](https://github.com/Contrast-Security-OSS/ctdc/blob/master/mysql.yml) for a snippet of Ansible that you can use to install the latest MySQL 5.6 on Ubuntu 14.04.   
+
+* You can download the *gpg* keyfile and additional information from the [MySQL documentation](http://dev.mysql.com/doc/refman/5.6/en/checking-gpg-signature.html)
+* Contrast changes the bind address to "*" above for illustration, but recommends binding your MySQL server to the IP of your application server.
+* Contrast recommend creating a user and grants that offer access to only the Contrast schema and limited to the host IP address or subnet.
+
+## Take a Backup of MySQL
 
 To back up your database, you can use the embedded tool with your EOP installation.  
 
@@ -113,25 +66,25 @@ To back up your database, you can use the embedded tool with your EOP installati
 $CONTRAST_HOME/bin/backup_db.sh
 ```
 
-Please move the backup taken to the external MySQL database host and make a note of the path.
+Move this backup to the external MySQL database host and make a note of the path.
 
-### Restore the Database
+### Restore the database
 
-Before you restore to your external database host, make sure that you have created your schema, user, and correct grants!    
-
-Here is an example command to import a local mysql backup:
+Before you restore to your external database host, make sure that you created your schema, user, and correct grants. You can use this sample command to import a local MySQL backup:
 
 ```
 $ mysql -u username –p database_name < /path/to/backup.sql
 ```
 
+For more information on this process, see the article to [Create a MySQL Backup](installation-setup.html#setup-mysql).
 
-### Update the TeamServer Configuration
-It is possible to edit your database configuration through the TeamServer SuperAdmin portal in a browser or using the properties editor if you prefer the command line. This obviously assumes the TeamServer is up and running. You will have to opt for the encrypted property editor if you have already shutdown the TeamServer for the maintenance window.  
 
-*Either of these changes will require a restart of your TeamServer*  
+### Update the Contrast configuration
+
+You can edit your database configuration through the SuperAdmin portal or the properties editor. If you already shutdown Contrast for the maintenance window, you must use the encrypted property editor. Either of these changes requires you to restart of Contrast.
 
 #### SuperAdmin Portal
+
 1. Log in to Contrast TeamServer
 2. Assume SuperAdmin role
 3. Click "System Settings" from the top right drop down menu.
@@ -140,7 +93,9 @@ It is possible to edit your database configuration through the TeamServer SuperA
 
 
 #### Encrypted Property Editor
+
 You will need to use the [encrypted property editor](installation-setupconfig.html#encrypt) to change your database properties to access your new host. Follow the instructions in the tool to update:
+
 - jdbc.port
 - jdbc.host
 - jdbc.pass
@@ -172,24 +127,29 @@ jdbc.driver                                       : com.mysql.jdbc.Driver
 
 Enter the name of the property to edit [q to Quit]:
 
-### Restart TeamServer
-This command will be slightly different if you have chosen the non-root installation.
+### Restart Contrast
+
+Use the following sets of commands to restart Contrast. 
+
+This command is slightly different if you chose the non-root installation:
+
 ```
 $ sudo service contrast-server restart
 ```
 
-At this point it will be helpful to tail the server logs.
+At this point, it's helpful to tail the server logs:
 
 ```
 $ tail -f $CONTRAST_HOME/logs/server.log
 ```
 
-And then the application logs.
+And then the application logs:
+
 ```
 $ tail -f $CONTRAST_HOME/logs/contrast.log
 ```
 
-If TeamServer starts successfully, you will see this message in the server.log:
+If Contrast starts successfully, you will see this message in the server.log:
 
 ```
 190116 21.22.15,703 {} {} {} INFO  (ConnectionTester.java:50) Received code 200 from TeamServer
@@ -198,85 +158,27 @@ If TeamServer starts successfully, you will see this message in the server.log:
 ```
 
 
-## Step 2: Application Server
-Before you begin, it is important that you work with Contrast Support and have access to the TeamServer WAR file before beginning this process.  
+## Step 2: The Application Server
 
-If the dns name of your installation is going to change, you will need to update `teamserver.url` in the `general.properties` file to reflect the new hostname.  This will also impact agents that have already been deployed.
+Before you begin, it's important that you work with the Contrast Support team and have access to the Contrast *WAR* file before beginning this process.  
 
-Here is an outline of the steps it will take to migrate TeamServer to your own Tomcat instance:
+If the DNS name of your installation is going to change, you must update `teamserver.url` in the `general.properties` file to reflect the new hostname. This also impacts agents that have already been deployed.
+
+Here is an outline of the steps it will take to migrate Contrast to your own Tomcat instance:
 
 1. Collect configuration and license from current TeamServer
 2. Install Tomcat7 and Java on your new application server
 3. Prepare and Configure application server
 4. Restart Tomcat
 
-Below (or [here](https://github.com/Contrast-Security-OSS/ctdc/blob/master/appserver.yml)) is a snippet of Ansible that you could use to install the latest versions of Tomcat7 and Java7 on Ubuntu 14.04.  We use Ubuntu and Ansible here as examples only.  This software will run on supported versions of Windows and Linux.
+Visit our [Github repository](https://github.com/Contrast-Security-OSS/ctdc/blob/master/appserver.yml) for a snippet of Ansible that you can use to install the latest versions of Tomcat7 and Java7 on Ubuntu 14.04. 
 
-```
-- hosts: appserver
-  sudo: True
-  vars:
-    contrast_local_artifact_path: ~/Desktop/byo
-    contrast_war: contrast-teamserver-3.2.4.war
-    contrast_data_dir: /opt/contrast-data
-    eop_config: contrastdata
-    filename_extension: tar.gz
-    java_opts: "-XX:+UseTLAB -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:CMSFullGCsBeforeCompaction=1 -XX:+CMSParallelRemarkEnabled -XX:+PrintVMOptions -XX:+PrintCommandLineFlags -Xmx4096m -Xms4096m -server -XX:MaxPermSize=768m -Dcontrast.data.dir=\{{ contrast_data_dir }} -Dcontrast.home=\{{ contrast_data_dir }} -XX:+HeapDumpOnOutOfMemoryError -Xloggc:\{{ contrast_data_dir }}/gc.out"
-  tasks:
-  - name: Install Tomcat7 Software
-    apt: name=tomcat7 update_cache=yes state=present
-
-  - name: add java repository to sources
-    action: shell add-apt-repository -y ppa:webupd8team/java
-
-  - name: autoaccept license for java
-    action: shell echo oracle-java7-installer shared/accepted-oracle-license-v1-1 select true | sudo /usr/bin/debconf-set-selections
-
-  - name: update apt package cache
-    apt: update_cache=yes
-
-  - name: install java 7 from oracle via apt
-    apt: name=oracle-java7-installer state=latest install_recommends=yes
-
-  - name: set oracle java 7 as default jvm
-    apt: name=oracle-java7-set-default state=latest install_recommends=yes
-
-  - name: Move local files to virtual machine
-    copy: src=\{{ contrast_local_artifact_path }}/\{{ contrast_war }} dest=/opt/ mode=0655 backup=yes
-
-  - name: Create contrast-data directory
-    file: path=\{{ contrast_data_dir }} state=directory mode=0755 owner=tomcat7 group=tomcat7 recurse=yes
-
-  - name: Unarchive configuration directory
-    unarchive: copy=yes src=\{{ contrast_local_artifact_path}}/\{{ eop_config }}.\{{ filename_extension }} dest=\{{ contrast_data_dir }} owner=tomcat7 group=tomcat7
-
-  - name: Establish Permissions for contrast-data directory
-    file: path=\{{ contrast_data_dir }} state=directory mode=0755 owner=tomcat7 group=tomcat7 recurse=yes
-
-  - name: Create symlink to war (very important that warname is "Contrast.war")
-    file: >
-      state=link
-      src=/opt/\{{ contrast_war }}
-      dest=/var/lib/tomcat7/webapps/Contrast.war
-      owner=tomcat7
-      group=tomcat7
-      force=yes
-
-  - name: Set JAVA_OPTS
-    replace: >
-      dest=/etc/default/tomcat7
-      regexp='JAVA_OPTS="-Djava\.awt\.headless=true -Xmx128m -XX:\+UseConcMarkSweepGC"'
-      replace='JAVA_OPTS="\{{ java_opts }}"'
-
-  - name: Mark your license as pre-initialized
-    file: path=\{{ contrast_data_dir }}/.initialized state=touch owner=tomcat7 group=tomcat7
-
-  - name: Restart tomcat7
-    service: name=tomcat7 state=restarted
-```
+> **Note:** We use Ubuntu and Ansible here as examples only. This software also runs on supported versions of Windows and Linux.
 
 ### Collect Configuration from Current TeamServer
-In the example below, Contrast has been installed at path `/usr/local/contrast`.  You will need to gather the following:
+
+In the example below, Contrast has been installed at path `/usr/local/contrast`.  Gather the following files: 
+
 * data/conf/
 * data/esapi/
 * data/.contrast
@@ -285,7 +187,7 @@ In the example below, Contrast has been installed at path `/usr/local/contrast`.
 * data/contrast.lic
 * webapps/Contrast.war
 
-This code will compress necessary artifacts into your user's home directory.
+This code compresses necessary artifacts into your user's home directory:
 
 ```
 $ cd /usr/local/contrast
@@ -293,6 +195,7 @@ $ tar -czvf ~/ctdc.tar.gz data/conf data/contrast.lic data/esapi/ data/cache/ da
 ```
 
 ### Install Tomcat7 and Java
+
 This process will vary based on your operating system.  You will need to install:
 * Tomcat7. (We recommend tomcat7.0.61)
 * Java7. (We recommend Java 1.7.0_80)
@@ -356,7 +259,7 @@ Every distribution is different for setting JAVA_OPTS. Please refer to your dist
 #### Deploy the WAR
 In our compressed archive, we included the Contrast.war from your EOP installation.  Going forward, Contrast will deliver a war-only artifact for faster updates and software iterations. This war file will be accessible from Hub for download purposes.  
 
-Symlink, Copy, or Move the WAR into the Tomcat webapps directory.  For the default Ubuntu installation, that path is used below.
+Symlink, copy or move the *WAR* into the Tomcat webapps directory.  For the default Ubuntu installation, that path is used below.
 
 *Warning: yours may be different.*
 
@@ -377,11 +280,14 @@ or
 $ cp /opt/contrast-data/Contrast.war /var/lib/tomcat7/webapps/Contrast.war
 ```
 
-Once the WAR is deployed, you should be able to start your newly configured and distributed TeamServer. If you run into any problems, please let our Technical Support team know right away and we will help.
+Once the *WAR* is deployed, you should be able to start your newly configured and distributed TeamServer. If you run into any problems, please let our Technical Support team know right away and we will help.
 
 ## More Information
-Please let us know if you are interested in specific topics below.  We will expand our documentation based on customer demand.
 
 * [Load Balancing with nginx](http://blogs.mulesoft.com/dev/tomcat-tcat-server/load-balancing-apache-tomcat-with-nginx/)
 * [Using nginx as a Load Balancer and for SSL Handoff](http://spin.atomicobject.com/2013/07/08/nginx-load-balancing-reverse-proxy-updated/)
 * [memcache session manager](https://github.com/magro/memcached-session-manager)
+
+If you are planning to explore a distributed configuration of Contrast, please contrast our [Technical Support Team](https://support.contrastsecurity.com). They would love to hear from you and keep track of your progress. 
+
+
